--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "investment-roll",
+  "name": "inv-roll",
   "version": "1.0.0",
   "description": "<div id=\"top\"></div>\r <!--\r *** Thanks for checking out the Best-README-Template. If you have a suggestion\r *** that would make this better, please fork the repo and create a pull request\r *** or simply open an issue with the tag \"enhancement\".\r *** Don't forget to give the project a star!\r *** Thanks again! Now go create something AMAZING! :D\r -->",
   "main": "server.js",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BostonTechie/Investment-roll.git"
+    "url": "git+https://github.com/BostonTechie/inv-roll.git"
   },
   "keywords": [],
   "author": "Andrew Urquhart",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/BostonTechie/Investment-roll/issues"
+    "url": "https://github.com/BostonTechie/inv-roll/issues"
   },
-  "homepage": "https://github.com/BostonTechie/Investment-roll#readme",
+  "homepage": "https://github.com/BostonTechie/inv-roll#readme",
   "dependencies": {
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
