--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.5",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
